Added Initial MarketData

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,1 @@
-<!-- <app-root>
-  <button (click)="sendMessage()">Send Message</button>
-
-  <ul>
-    <li *ngFor="let message of receivedMessages">{{ message }}</li>
-  </ul>
-</app-root> -->
-<h1>Angular Datatables Step by Step Example - ItSolutionStuff.com</h1>
-<table datatable [dtOptions]="dtOptions" class="row-border hover">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Body</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let post of posts">
-      <td>{{ post.id }}</td>
-      <td>{{ post.title }}</td>
-      <td>{{ post.body }}</td>
-    </tr>
-  </tbody>
-</table>
+<app-market-data></app-market-data>
